--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,14 @@
         android:theme="@style/Theme.Lab02_IOT_20181650"
         tools:targetApi="31">
         <activity
+            android:name=".ContadorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CronometroActivity"
+            android:exported="false" />
+        <activity
             android:name=".StartActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false" />
         <activity
             android:name=".SignUpActivity"
             android:exported="false" />
@@ -27,7 +32,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
